--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,14 @@
-ktor_version=2.3.2
-kotlin_version=1.9.0
-logback_version=1.2.11
+ktorVersion=2.3.2
+kotlinVersion=1.9.0
+logbackVersion=1.2.11
 kotlin.code.style=official
-postgres_version=42.5.1
-h2_version=2.1.214
-prometeus_version=1.6.3
+postgresVersion=42.5.1
+h2Version=2.1.214
+prometeusVersion=1.6.3
+exposedVersion=0.37.3
+# Postgresql driver version, it can be any db driver. Also change the equivalent dependency
+database_driverVersion=42.5.1
+gsonVersion=2.9.0
+jbcryptVersion=0.4
+hikaricpVersion=5.0.1
+redisVersion=0.8
